- Created app folder. - Added some styles. - Added required fields - Separated api calls and initial data into a new service file with async fetch. - Added strict mode in domUtils - Renamed`loadContacts`method (render) to `showContacts`

--- a/00 Boilerplate/assets/css/styles.css
+++ b/00 Boilerplate/assets/css/styles.css
@@ -9,3 +9,8 @@
 .form-inline .form-group > *:first-child {
    margin: 0 5px 0 20px;
 }
+
+table > thead > tr > th {
+  background-color: #555;
+  color: #FFF;
+}
