--- a/00 Boilerplate/assets/css/styles.css
+++ b/00 Boilerplate/assets/css/styles.css
@@ -10,6 +10,10 @@
    margin: 0 5px 0 20px;
 }
 
+table {
+  table-layout: fixed;
+}
+
 table > thead > tr > th {
   background-color: #555;
   color: #FFF;
