Finished boilerplate. Time to react

--- a/05.C Angular components & directive/src/components/accordion/accordion-panel/accordion-panel.html
+++ b/05.C Angular components & directive/src/components/accordion/accordion-panel/accordion-panel.html
@@ -1,6 +1,8 @@
 <div class="panel panel-default">
   <div class="panel-heading" style="cursor: pointer" ng-click="$ctrl.select()" role="panel">
-    <h3 class="panel-title">{{$ctrl.heading}}</h3>
+    <h3 class="panel-title">{{$ctrl.feed.heading}}</h3>
   </div>
-  <div class="panel-body collapsible" ng-class="$ctrl.selected" ng-transclude></div>
+  <div class="panel-body collapsible" ng-class="$ctrl.active">
+    {{$ctrl.feed.content}}
+  </div>
 </div>
