--- a/05.C Angular components & directive/src/components/accordion/accordion.html
+++ b/05.C Angular components & directive/src/components/accordion/accordion.html
@@ -1,1 +1,3 @@
-<div class="panel-group" role="tablist" aria-multiselectable="true" ng-transclude></div>
+<div class="panel-group" role="tablist">
+  <accordion-panel ng-repeat="feed in $ctrl.feeds track by $index" feed="feed" />
+</div>
