Updated README.md til Boilerplate. - Added sample gif. - Removed html related tasks in gulpfile.js

--- a/05.C Angular components & directive/src/components/page-content/page-content.html
+++ b/05.C Angular components & directive/src/components/page-content/page-content.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="text-center">Component based + react-component</h1>
+  <h1 class="text-center">Component based App</h1>
 </header>
 <main class="container">
   <div class="col-sm-9">
