Implemented React accordion component. - Updated README.md - Removed some unnecessary styles in `styles.css`. - Changed some diff formats in README.md.

--- a/05.C Angular components & directive/src/components/page-content/page-content.html
+++ b/05.C Angular components & directive/src/components/page-content/page-content.html
@@ -3,6 +3,6 @@
 </header>
 <main class="container">
   <div class="col-sm-9">
-    <accordion feeds="$ctrl.feeds" />
+    <react-component name="Accordion" props="{feeds: $ctrl.feeds}" />
   </div>
 </main>
