--- a/05.C Angular components & directive/src/css/styles.css
+++ b/05.C Angular components & directive/src/css/styles.css
@@ -19,15 +19,10 @@
   padding-bottom: 15px;
 }
 
-.panel-body.collapsible > * {
-  margin-left: 15px;
-  margin-right: 15px;
+.pointer {
+  cursor: pointer;
 }
 
-.panel-body.collapsible > *:first-child {
-  margin-top: 15px;
-}
-
-.panel-body.collapsible > *:last-child {
-  margin-bottom: 15px;
+.feed-content {
+  margin-bottom: 0;
 }
